--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -16,5 +16,11 @@ html, body {
 #app {
     width: 100%;
     height: 100%;
-    display: flex;
+}
+
+.center {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
